He añadido mi segundo apellido en el archivo Actividad1

--- a/Actividad-1.html
+++ b/Actividad-1.html
@@ -40,7 +40,7 @@
 </head>
 <body>
    <header id="header" class="header"> 
-       <h1>Diannelis de la Rosa</h1>
+       <h1>Diannelis de la Rosa Cervantes</h1>
     </header>
     <div class="arcticle">
          <p>Lorem fistrum caballo blanco caballo negroorl papaar papaar está la cosa muy malar mamaar apetecan tiene musho
@@ -50,6 +50,7 @@
         <br><u>Apetecan te voy a borrar el cerito no te digo trigo por no llamarte Rodrigor al ataquerl.</u><i>A wan fistro diodenoo 
         llevame al sircoo la caidita ese hombree la caidita.</i> <del>Papaar papaar sexuarl a peich ese que llega está la cosa
      muy malar quietooor caballo blanco caballo negroorl pecador hasta luego Lucas pupita ahorarr.</del></p>
+     <p>Que tienes más peligro que Magneto en una ferreteria</p>
 
     </div>
         <div class="footer"  >
